--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="robots" content="noindex, nofollow"/>
 	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
 	<link rel="canonical" href="" /> 
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -16,47 +16,82 @@
 	<link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-	<header>
-		<div class="container">
-			<div class="header">
-				<div class="header__logo">
-					<a href="#">
-						<img src="img/logo.png" alt="logo.png">
-					</a>
-				</div>
+	<div class="banner">
+		<header class="header">
+			<div class="container">
+				<div class="header__body">
+					<div class="header__logo">
+						<img src="img/logo_top.png" alt="">
+						<span>
+							deer.lab
+						</span>
+					</div>
+					<div class="header__nav">
+						<ul class="header__list">
+							<li class="header__item">
+								<a href="#" class="header__link">
+									about
+								</a>
+							</li>
+							<li class="header__item">
+								<a href="#" class="header__link">
+									portfolio
+								</a>
+							</li>
+							<li class="header__item">
+								<a href="#" class="header__link">
+									contacts
+								</a>
+							</li>
 
-				<div class="nav">
-					<ul class="nav__list">
-						<li class="nav__item">
-							<a href="#" class="nav__link">
-								123
-							</a>
-						</li>
-						<li class="nav__item">
-							<a href="#" class="nav__link">
-								123
-							</a>
-						</li>
-						<li class="nav__item">
-							<a href="#" class="nav__link">
-								123
-							</a>
-						</li>
-						<li class="nav__item">
-							<a href="#" class="nav__link">
-								123
-							</a>
-						</li>
-						<li class="nav__item">
-							<a href="#" class="nav__link">
-								123
-							</a>
-						</li>
-					</ul>
+						</ul>
+					</div>
 				</div>
 			</div>
+		</header>
+		<div class="container">
+			<div class="rhombus">
+				<div class="rhombus__big  rhombus__big--left">
+					<div class="rhombus__small  rhombus__small--1">
+					</div>
+					<div class="rhombus__small  rhombus__small--2"></div>
+					<div class="rhombus__small  rhombus__small--3">
+						<img src="img/logo_banner.png" alt="">
+					</div>
+					<div class="rhombus__small  rhombus__small--4"></div>
+				</div>
+				<div class="rhombus__big  rhombus__big--center">
+					<div class="rhombus__small  rhombus__small--1"></div>
+					<div class="rhombus__small  rhombus__small--2"></div>
+					<div class="rhombus__small  rhombus__small--3">
+						<p>
+							deer.lab
+							<span>interior design</span>
+						</p>
+					</div>
+					<div class="rhombus__small  rhombus__small--4"></div>
+				</div>
+				<div class="rhombus__big  rhombus__big--right">
+					<div class="rhombus__small  rhombus__small--1"></div>
+					<div class="rhombus__small  rhombus__small--2"></div>
+					<div class="rhombus__small  rhombus__small--3"></div>
+					<div class="rhombus__small  rhombus__small--4"></div>
+				</div>
+			</div>
+			<div class="left-sq"></div>
+			<div class="right-sq"></div>
 		</div>
-	</header>
+
+
+	</div>
+	<div class="main-1">
+	<div class="container">
+		<div class="window1">
+			<img src="img/window1.jpg" alt="">
+		</div>
+	</div>
+		
+	</div>
 	<footer>
 		<div class="container">
 			<div class="footer">
@@ -65,7 +100,6 @@
 		</div>
 	</footer>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/jquery.modal.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
