--- a/src/index.html
+++ b/src/index.html
@@ -85,12 +85,73 @@
 
 	</div>
 	<div class="main-1">
-	<div class="container">
-		<div class="window1">
-			<img src="img/window1.jpg" alt="">
+		<div class="container">
+			<div class="window1__wrapper">
+				<div class="window1  wind">
+					<img src="img/window1.jpg" alt="">
+					
+				</div>
+				<div class="window1__light  light">
+						<div class="light__item"></div>
+						<div class="light__item"></div>
+						<div class="light__item"></div>
+				</div>
+
+				<div class="window1__light2  light">
+						<div class="light__item"></div>
+						<div class="light__item"></div>
+						<div class="light__item"></div>
+				</div>
+
+
+			</div>
+			
+			<div class="window2  wind">
+				<img src="img/window2.jpg" alt="">
+			</div>
+			<div class="window3  wind">
+				<img src="img/window3.jpg" alt="">
+			</div>
+			<div class="window4  wind">
+				<img src="img/window4.jpg" alt="">
+			</div>
+			<div class="main-1__text">
+				In these days more and more people live in small apartments, because the prices for buying or renting an apartment are higher and higher every year. Now the most challenging issue with living in a small apartment is not the size of the apartment itself, but all the things you have to organize in a small place. 
+
+			</div>
+			<div class="main-1__logo">
+				<img src="img/logo__main1.png" alt="">
+			</div>
+			<div class="main-1__text2">
+			<span class="main-1__deer">
+				deer.lab
+				<span>
+					interiors  
+				</span>
+			</span>
+				mission is to help people visualize, create & maintain beautiful homes. We bring to you inspiring visuals of cool homes, specific spaces, architectural marvels and new design trends. Follow us for a daily dose of outstanding homes, intelligent architecture & beautiful design.
+
+			</div>
 		</div>
-	</div>
 		
+	</div>
+	<div class="main-2">
+		<div class="container">
+			<div class="main-2__body">
+				<div class="main-2__title">
+					<div class="light">
+							<div class="light__item"></div>
+							<div class="light__item"></div>
+							<div class="light__item"></div>
+					</div>
+					<p>love of detail</p>
+				</div>
+				<div class="main-2__text">
+					We are always inspired by the achievements of other creatives, and love it when they are local  and so we wanted
+to take a closer look.....
+				</div>
+			</div>
+		</div>
 	</div>
 	<footer>
 		<div class="container">
