--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,8 @@
 
 			</div>
 			<div class="main-1__logo">
-				<img src="img/logo__main1.png" alt="">
+				<img src="img/logo__main1.png" class="logo-im" alt="">
+				<img src="img/logo-t__main1.png" alt=""  class="logo-t">
 			</div>
 			<div class="main-1__text2">
 			<span class="main-1__deer">
@@ -147,11 +148,79 @@
 					<p>love of detail</p>
 				</div>
 				<div class="main-2__text">
-					We are always inspired by the achievements of other creatives, and love it when they are local  and so we wanted
-to take a closer look.....
+					We are always inspired by the achievements of other creatives, and love it when they are local  and so we wanted to take a closer look.....
 				</div>
 			</div>
 		</div>
+	</div>
+	<div class="main-3">
+
+			<div class="slider">
+				<div class="slider-for">
+					<div>
+						<img src="img/slide1.jpg" alt="">
+						<div class="slider__desc">
+							The project was a warehouse conversion in an industrial area of East End, London, transforming it from former chocolate factory into a family home.
+						</div>
+					</div>
+					<div>
+						<img src="img/slide2.jpg" alt="">
+						<div class="slider__desc">
+							1
+						</div>
+					</div>
+					<div>
+						<img src="img/slide3.jpg" alt="">
+						<div class="slider__desc">
+							2
+						</div>
+					</div>
+					<div>
+						<img src="img/slide4.jpg" alt="">
+						<div class="slider__desc">
+							3
+						</div>
+					</div>
+					<div>
+						<img src="img/window1.jpg" alt="">
+						<div class="slider__desc">
+							4
+						</div>
+					</div>
+					<div>
+						<img src="img/window2.jpg" alt="">
+						<div class="slider__desc">
+							5
+						</div>
+					</div>
+					<div>
+						<img src="img/window3.jpg" alt="">
+						<div class="slider__desc">
+							6
+						</div>
+					</div>
+					<div>
+						<img src="img/window4.jpg" alt="">
+						<div class="slider__desc">
+							7
+						</div>
+					</div>
+				</div>
+				<div class="slider-nav__container">
+					<div class="slider-nav">
+						<div><img src="img/slide1.jpg" alt=""></div>
+						<div><img src="img/slide2.jpg" alt=""></div>
+						<div><img src="img/slide3.jpg" alt=""></div>
+						<div><img src="img/slide4.jpg" alt=""></div>
+						<div><img src="img/window1.jpg" alt=""></div>
+						<div><img src="img/window2.jpg" alt=""></div>
+						<div><img src="img/window3.jpg" alt=""></div>
+						<div><img src="img/window4.jpg" alt=""></div>
+					</div>
+				</div>
+				
+			</div>
+
 	</div>
 	<footer>
 		<div class="container">
@@ -161,7 +230,7 @@ to take a closer look.....
 		</div>
 	</footer>
 	<script src="js/jquery.min.js"></script>
-	<script src="js/slick.min.js"></script>
+	<script src="js/slick.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
