--- a/src/index.html
+++ b/src/index.html
@@ -383,12 +383,41 @@
 				<div class="main-7__map" id="map-deer">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5089.68499082533!2d-73.9683217671824!3d40.666371128357916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b04fbd2689d%3A0x711f086144b92aa4!2z0JfQvtC-0L_QsNGA0Log0J_RgNC-0YHQv9C10LrRgiDQn9Cw0YDQug!5e0!3m2!1sru!2sua!4v1490778118551" width="670" height="520" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
+				<div class="main-7__right">
+					<div class="main-7__contacts">
+						<div class="main-7__contact  main-7__contact--phone">
+							<img src="img/mob.png" alt="">
+							<span>0450 6789 89 87</span>
+						</div>
+						<div class="main-7__contact  ">
+							<img src="img/home.png" alt="">
+							<span>14th street, 168, Brooklyn, New York</span>
+						</div>
+						<div class="main-7__contact  ">
+							<img src="img/mail.png" alt="">
+							<span>info@deerlab.com</span>
+						</div>
+					</div>
+					<div class="main-4__logo  main-7__logo">
+						<img src="img/logo__main1.png" class="main-7__logo--i" alt="">
+						<img src="img/logo-t__main1.png" alt=""  class="main-4__logo-t  main-7__logo--t">
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
 	<footer>
 		<div class="container">
 			<div class="footer">
+				<div>
+					© Copyright Deer.Lab  2015. All rights Reserved 
+				</div>
+				<div  class="footer__prodused">  
+					Produced by
+					<span class="footer__point">
+						<img src="img/point.png" alt="">
+					</span>
+				</div>
 				
 			</div>
 		</div>
